--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,18 @@ Temporary Items
 .crt
 .csr
 .pem
+
+#JET
+/jet_components
+/exchange_components
+/node_modules
+/dist
+/web
+/staged-themes
+/themes
+/jaftmp@
+
+package-lock.json
+.DS_Store
+Thumbs.db
+web.zip
