--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tempProjectF1",
+  "name": "OCI-Garage-Clock",
   "version": "1.0.0",
   "description": "An Oracle JavaScript Extension Toolkit(JET) web app",
   "dependencies": {
